# LightRagNotebookLM

./: .env.example  .gitignore  .pre-commit-config.docker.yaml  .pre-commit-config.yaml  FILE_PROCESSING_PIPELINE.md  IDEMPOTENCY_AND_ERROR_HANDLING.md  INDEXING.md  LIGHTRAG_INTEGRATION_PLAN.md  LIGHTRAG_URL_ENDPOINT_PLAN.md  Makefile  README.md  VERSION_CONTROL_AND_DOCKER_SETUP.md  docker-compose.yml  inspect-data.sh
docs/observability/: kibana-rag-log-guide.md
fastapi_agent/: Dockerfile  README.md  pyproject.toml
fastapi_agent/app/: main.py
fastapi_agent/app/agents/: LANGGRAPH_STATE_INJECTION.md  __init__.py  base.py  chat_agent.py  notebook_agent.py
fastapi_agent/app/api/: main.py
fastapi_agent/app/api/routes/: chat_agui.py  notebook_chat.py
fastapi_agent/app/core/: config.py
fastapi_agent/app/protocols/: agui_utils.py  events.py
fastapi_backend/: Dockerfile  pyproject.toml
fastapi_backend/app/: backend_pre_start.py  business_model.md  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
indexing_worker/: Dockerfile  README.md  pyproject.toml
indexing_worker/app/: __init__.py  models.py
indexing_worker/app/core/: config.py  db.py  kafka.py  qdrant.py
indexing_worker/app/processors/: __init__.py  base.py  docx_processor.py  factory.py  pdf_processor.py  txt_processor.py  url_processor.py
indexing_worker/app/workers/: __init__.py  indexing_worker.py
indexing_worker/examples/: processor_example.py
indexing_worker/tests/: test_processors.py
local-shared-data/: openapi.json
nextjs-frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
nextjs-frontend/__tests__/: login.test.tsx  loginPage.test.tsx  passwordReset.test.tsx  passwordResetConfirm.test.tsx  passwordResetConfirmPage.test.tsx  passwordResetPage.test.tsx  register.test.ts  registerPage.test.tsx
nextjs-frontend/app/: ClientCopilotKitWrapper.tsx  agentConfig.ts  globals.css  layout.tsx  not-found.tsx
nextjs-frontend/components/: ErrorBoundary.tsx
nextjs-frontend/contexts/: AuthContext.tsx  NotebookContext.tsx
nextjs-frontend/docs/: ERROR_MESSAGE_SYSTEM.md  REDIRECT_CONFIGURATION.md  USER_DROPDOWN_ENHANCEMENTS.md
nextjs-frontend/hooks/: useAuthRedirect.ts  useDateFormatting.ts  useNotebookList.ts  useNotebookOperations.ts
nextjs-frontend/lib/: apiConfig.ts  definitions.ts  design-system.ts  error-handling.ts  errorMessages.ts  (+9 more)
scripts/: .embeddings_cache.json  elk_rag_monitor.py  rag_fetch_chunks.py  rag_logs_monitor.py  setup_elk_stack.sh  setup_file_processing.py  test_vector_search.py  verify_elk_stack.sh  verify_filebeat_rootless.sh
(+120 files in other folders)
